--- a/index.html
+++ b/index.html
@@ -67,11 +67,27 @@
 
     <!-- Game Over Screen -->
     <div id="gameOverScreen" class="wood-panel">
-        <h1>GAME OVER</h1>
-        <div style="display: flex; justify-content: center; align-items: center; margin-bottom: 15px;">
-            <img id="medal" src="" alt="Medal" style="width: 60px; height: 60px; margin-right: 20px; display: none;">
-            <p id="finalScore" class="text-xl font-bold text-gray-800" style="margin: 0;">Score: 0</p>
+        <h1 class="flappy-title" style="margin-bottom: 25px;">GAME OVER</h1>
+        
+        <div style="display: flex; justify-content: space-between; align-items: center; background: #D6C291; border: 4px solid #553A26; border-radius: 8px; padding: 15px; margin-bottom: 20px;">
+            <div style="flex: 0 0 70px; text-align: center;">
+                <p style="font-size: 10px; color: #E86A17; margin-bottom: 5px; font-weight: bold;">MEDAL</p>
+                <img id="medal" src="" alt="Medal" style="width: 50px; height: 50px; display: none; margin: 0 auto;">
+                <div id="noMedalPlaceholder" style="width: 44px; height: 44px; background: rgba(0,0,0,0.1); border-radius: 50%; margin: 3px auto; display: block;"></div> 
+            </div>
+            
+            <div style="flex: 1; margin-left: 20px; text-align: right;">
+                <div style="margin-bottom: 10px;">
+                    <p style="font-size: 10px; color: #E86A17; margin-bottom: 2px; font-weight: bold;">SCORE</p>
+                    <p id="finalScore" class="text-2xl font-bold text-gray-800" style="margin: 0; font-family: 'Press Start 2P'; font-size: 20px;">0</p>
+                </div>
+                <div>
+                    <p style="font-size: 10px; color: #E86A17; margin-bottom: 2px; font-weight: bold;">BEST</p>
+                    <p id="bestScore" class="text-2xl font-bold text-gray-800" style="margin: 0; font-family: 'Press Start 2P'; font-size: 20px;">0</p>
+                </div>
+            </div>
         </div>
+
         <button id="retryBtn" class="btn">RETRY</button>
         <p class="mt-4 text-xs text-green-800 font-bold animate-pulse">
             or PINCH to RETRY!
