Track medal counts and display collection on home page

--- a/index.html
+++ b/index.html
@@ -63,6 +63,29 @@
             </div>
         </div>
 
+        <!-- Medals Collection Section -->
+        <div id="medalsCollection" style="margin-bottom: 20px; padding: 10px; background: rgba(255,255,255,0.3); border-radius: 10px; border: 2px dashed #8B4513;">
+            <p style="font-size: 10px; color: #5D4037; font-weight: bold; margin-bottom: 10px;">MEDALS COLLECTION</p>
+            <div style="display: grid; grid-template-columns: repeat(4, 1fr); gap: 5px;">
+                <div class="medal-badge">
+                    <img src="public/assets/medal_platinum.svg" alt="P">
+                    <span id="count-PLATINUM">0</span>
+                </div>
+                <div class="medal-badge">
+                    <img src="public/assets/medal_gold.svg" alt="G">
+                    <span id="count-GOLD">0</span>
+                </div>
+                <div class="medal-badge">
+                    <img src="public/assets/medal_silver.svg" alt="S">
+                    <span id="count-SILVER">0</span>
+                </div>
+                <div class="medal-badge">
+                    <img src="public/assets/medal_bronze.svg" alt="B">
+                    <span id="count-BRONZE">0</span>
+                </div>
+            </div>
+        </div>
+
         <p class="mb-4 text-gray-800 font-bold" id="startInstruction">Enable Camera to Play</p>
         
         <button id="enableCameraBtn" class="btn btn-secondary">
