--- a/index.html
+++ b/index.html
@@ -3,8 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flapfing - AI Controlled Game</title>
+    <title>Flapfing - AI-Controlled Flappy Bird Game with Hand Gestures</title>
     
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Play Flapfing, a modern Flappy Bird clone controlled by your hand gestures using AI! Pinch your fingers to fly and compete for high scores and medals. No keyboard needed!">
+    <meta name="keywords" content="Flapfing, Flappy Bird, AI Game, Hand Gesture Game, Mediapipe, Browser Game, Free Game, Flappy Bird Clone">
+    <meta name="author" content="Sriramik">
+    <link rel="canonical" href="https://sriramiks-small-magic.netlify.app/">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://sriramiks-small-magic.netlify.app/">
+    <meta property="og:title" content="Flapfing - AI-Controlled Flappy Bird Game">
+    <meta property="og:description" content="Fly the bird using only your hand! A revolutionary AI-powered gaming experience in your browser.">
+    <meta property="og:image" content="https://sriramiks-small-magic.netlify.app/public/assets/bird.svg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://sriramiks-small-magic.netlify.app/">
+    <meta property="twitter:title" content="Flapfing - AI-Controlled Flappy Bird Game">
+    <meta property="twitter:description" content="Fly the bird using only your hand! A revolutionary AI-powered gaming experience in your browser.">
+    <meta property="twitter:image" content="https://sriramiks-small-magic.netlify.app/public/assets/bird.svg">
+
+    <!-- Structured Data (JSON-LD) -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "SoftwareApplication",
+      "name": "Flapfing",
+      "operatingSystem": "Web Browser",
+      "applicationCategory": "GameApplication",
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": "4.8",
+        "ratingCount": "150"
+      },
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "USD"
+      }
+    }
+    </script>
+
     <!-- Styles -->
     <link rel="stylesheet" href="src/css/style.css">
     <script src="https://cdn.tailwindcss.com"></script>
@@ -24,16 +65,16 @@
             <div id="loadingFill" class="loading-bar-fill" style="width: 100%;"></div>
         </div>
         <div id="loadingPercent" class="loading-text">100%</div>
-        <div id="currentFile" style="font-size: 12px; margin-top: 5px; opacity: 0.7;">Initializing Modules...</div>
+        <div id="currentFile" style="font-size: 12px; margin-top: 5px; opacity: 0.7;">Initializing AI Modules...</div>
     </div>
 
     <!-- Game Elements -->
-    <video id="input_video"></video>
-    <canvas id="gameCanvas"></canvas>
-    <div id="scoreBoard">0</div>
+    <video id="input_video" aria-hidden="true"></video>
+    <canvas id="gameCanvas" role="img" aria-label="Game Screen"></canvas>
+    <div id="scoreBoard" aria-live="polite">0</div>
 
     <!-- Camera Box -->
-    <div id="cameraBox" class="camera-container">
+    <div id="cameraBox" class="camera-container" role="region" aria-label="Hand Tracking View">
         <div id="cameraLoader" class="camera-loader">
             <div class="spinner camera-spinner"></div>
             <div>Starting<br>Camera...</div>
@@ -47,15 +88,15 @@
     </div>
 
     <!-- Start Screen -->
-    <div id="startScreen" class="wood-panel">
+    <main id="startScreen" class="wood-panel">
         <h1 class="flappy-title">FLAPFING</h1>
-        <img id="homeBird" src="public/assets/bird.svg" alt="Bird">
+        <img id="homeBird" src="public/assets/bird.svg" alt="Animated Bird Mascot">
         
         <!-- Best Record Section -->
         <div id="homeBestRecord" style="background: rgba(0,0,0,0.1); border-radius: 12px; padding: 10px; margin-bottom: 20px; display: none;">
             <p style="font-size: 10px; color: #5D4037; font-weight: bold; margin-bottom: 8px;">YOUR BEST RECORD</p>
             <div style="display: flex; align-items: center; justify-content: center;">
-                <img id="homeBestMedalIcon" src="" style="width: 40px; height: 40px; margin-right: 10px;">
+                <img id="homeBestMedalIcon" src="" style="width: 40px; height: 40px; margin-right: 10px;" alt="Highest Earned Medal">
                 <div style="text-align: left;">
                     <p id="homeBestMedalName" style="font-family: 'Press Start 2P'; font-size: 8px; color: #E86A17; margin: 0;"></p>
                     <p style="font-family: 'Press Start 2P'; font-size: 10px; color: #3E2723; margin: 2px 0 0 0;">BEST: <span id="homeBestScore">0</span></p>
@@ -68,19 +109,19 @@
             <p style="font-size: 10px; color: #5D4037; font-weight: bold; margin-bottom: 10px;">MEDALS COLLECTION</p>
             <div style="display: grid; grid-template-columns: repeat(4, 1fr); gap: 5px;">
                 <div class="medal-badge">
-                    <img src="public/assets/medal_platinum.svg" alt="P">
+                    <img src="public/assets/medal_platinum.svg" alt="Platinum Medal Icon">
                     <span id="count-PLATINUM">0</span>
                 </div>
                 <div class="medal-badge">
-                    <img src="public/assets/medal_gold.svg" alt="G">
+                    <img src="public/assets/medal_gold.svg" alt="Gold Medal Icon">
                     <span id="count-GOLD">0</span>
                 </div>
                 <div class="medal-badge">
-                    <img src="public/assets/medal_silver.svg" alt="S">
+                    <img src="public/assets/medal_silver.svg" alt="Silver Medal Icon">
                     <span id="count-SILVER">0</span>
                 </div>
                 <div class="medal-badge">
-                    <img src="public/assets/medal_bronze.svg" alt="B">
+                    <img src="public/assets/medal_bronze.svg" alt="Bronze Medal Icon">
                     <span id="count-BRONZE">0</span>
                 </div>
             </div>
@@ -99,7 +140,7 @@
         <p id="gestureHint" class="mt-4 text-xs text-green-800 font-bold animate-pulse" style="display: none;">
             or PINCH to START!
         </p>
-    </div>
+    </main>
 
     <!-- Game Over Screen -->
     <div id="gameOverScreen" class="wood-panel">
@@ -108,7 +149,7 @@
         <div style="display: flex; justify-content: space-between; align-items: center; background: #D6C291; border: 4px solid #553A26; border-radius: 8px; padding: 15px; margin-bottom: 20px;">
             <div style="flex: 0 0 70px; text-align: center;">
                 <p style="font-size: 10px; color: #E86A17; margin-bottom: 5px; font-weight: bold;">MEDAL</p>
-                <img id="medal" src="" alt="Medal" style="width: 50px; height: 50px; display: none; margin: 0 auto;">
+                <img id="medal" src="" alt="Earned Medal" style="width: 50px; height: 50px; display: none; margin: 0 auto;">
                 <p id="medalName" style="font-size: 8px; font-family: 'Press Start 2P'; color: #5D4037; margin-top: 5px; line-height: 1.2;"></p>
                 <div id="noMedalPlaceholder" style="width: 44px; height: 44px; background: rgba(0,0,0,0.1); border-radius: 50%; margin: 3px auto; display: block;"></div> 
             </div>
