--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Flapfing - AI-Controlled Flappy Bird Game with Hand Gestures</title>
     
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Play Flapfing, a modern Flappy Bird clone controlled by your hand gestures using AI! Pinch your fingers to fly and compete for high scores and medals. No keyboard needed!">
+    <meta name="description" content="Play Flapfing, a modern Flappy Bird clone controlled by hand gestures using AI! Pinch your fingers to fly and compete for high scores. No keyboard needed!">
     <meta name="keywords" content="Flapfing, Flappy Bird, AI Game, Hand Gesture Game, Mediapipe, Browser Game, Free Game, Flappy Bird Clone">
     <meta name="author" content="Sriramik">
     <link rel="canonical" href="https://sriramiks-small-magic.netlify.app/">
@@ -144,7 +144,7 @@
 
     <!-- Game Over Screen -->
     <div id="gameOverScreen" class="wood-panel">
-        <h1 class="flappy-title" style="margin-bottom: 25px;">GAME OVER</h1>
+        <h2 class="flappy-title" style="margin-bottom: 25px;">GAME OVER</h2>
         
         <div style="display: flex; justify-content: space-between; align-items: center; background: #D6C291; border: 4px solid #553A26; border-radius: 8px; padding: 15px; margin-bottom: 20px;">
             <div style="flex: 0 0 70px; text-align: center;">
