Add bird favicon and further SEO refinements

--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flapfing - AI-Controlled Flappy Bird Game with Hand Gestures</title>
     
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="public/assets/bird.svg">
+    
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Play Flapfing, a modern Flappy Bird clone controlled by hand gestures using AI! Pinch your fingers to fly and compete for high scores. No keyboard needed!">
+    <meta name="description" content="Play Flapfing, a modern Flappy Bird clone controlled by hand gestures using AI! Fly the bird with a simple pinch and compete for high scores.">
     <meta name="keywords" content="Flapfing, Flappy Bird, AI Game, Hand Gesture Game, Mediapipe, Browser Game, Free Game, Flappy Bird Clone">
     <meta name="author" content="Sriramik">
     <link rel="canonical" href="https://sriramiks-small-magic.netlify.app/">
