--- a/404.html
+++ b/404.html
@@ -57,7 +57,7 @@
 <body>
     <div class="container wood-panel">
         <h1 class="error-code">404</h1>
-        <img src="public/assets/bird.svg" alt="Confused Bird" class="lost-bird">
+        <img src="./public/assets/bird.svg" alt="Confused Bird" class="lost-bird">
         <p class="message">OYE! Where are you going? <br> This page doesn't exist. Even the bird is confused!</p>
         <a href="index.html" class="btn">FLY BACK HOME</a>
     </div>
