Official branding to Flapfing and enhanced SEO optimization
- Renamed 'Flappy Bird' references to 'Flapfing' for trademark protection
- Optimized Meta Tags, Open Graph, and JSON-LD for better search indexing
- Added 404.html to sitemap.xml and enhanced its SEO
- Refined CSS class names to match new branding

--- a/404.html
+++ b/404.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404 - Lost in the Clouds</title>
+    <title>Lost in the Clouds - Flapfing Official AI Game</title>
+    <meta name="description" content="Oops! You've flown off course. This page doesn't exist. Fly back to Flapfing, the official AI-controlled bird adventure.">
+    <meta name="keywords" content="Flapfing, 404 error, AI game, bird game, hand gesture game">
     <link rel="stylesheet" href="src/css/style.css">
     <style>
         body {
