Update SEO metadata for Author and Publisher
- Set author to Sriramik Sanjiv Sahu
- Set organization/team to The Silent Zone
- Enhanced JSON-LD structured data with new authorship details

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <!-- SEO Meta Tags -->
     <meta name="description" content="Play Flapfing, the official AI-powered bird adventure controlled by hand gestures! Experience next-gen browser gaming with Mediapipe hand tracking.">
     <meta name="keywords" content="Flapfing, AI Bird Game, Hand Gesture Game, Mediapipe, Browser Game, Free Web Game, Motion Control Game, Sriramik Magic">
-    <meta name="author" content="Sriramik">
+    <meta name="author" content="Sriramik Sanjiv Sahu (The Silent Zone)">
+    <meta name="publisher" content="The Silent Zone">
     <meta name="robots" content="index, follow">
     <meta name="rating" content="general">
     <link rel="canonical" href="https://sriramiks-small-magic.netlify.app/">
@@ -38,6 +39,18 @@
       "name": "Flapfing",
       "operatingSystem": "Web Browser",
       "applicationCategory": "GameApplication",
+      "author": {
+        "@type": "Person",
+        "name": "Sriramik Sanjiv Sahu",
+        "memberOf": {
+          "@type": "Organization",
+          "name": "The Silent Zone"
+        }
+      },
+      "publisher": {
+        "@type": "Organization",
+        "name": "The Silent Zone"
+      },
       "aggregateRating": {
         "@type": "AggregateRating",
         "ratingValue": "4.8",
