feat: add real-time FPS counter and adjust pipe spawn to ~10s delay

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
     <!-- Instruction Bar -->
     <footer class="instruction-bar">
-        STATUS: <span id="statusText">System Loading...</span> | TIP: Pinch <span class="highlight-text">Thumb & Index</span> to Jump
+        STATUS: <span id="statusText">System Loading...</span> | FPS: <span id="fpsText" class="highlight-text">0</span> | TIP: Pinch <span class="highlight-text">Thumb & Index</span> to Jump
     </footer>
 
     <!-- Start Screen -->
