docs: add Microsoft Bing verification meta tag

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <meta name="keywords" content="Flapfing, AI Bird Game, Hand Gesture Game, Mediapipe, Browser Game, Free Web Game, Motion Control Game, Sriramik Magic">
     <meta name="author" content="Sriramik Sanjiv Sahu (The Silent Zone)">
     <meta name="publisher" content="The Silent Zone">
+    <meta name="msvalidate.01" content="9FDA2B2762D21CFDC49CE3D011E190AF" />
     <meta name="robots" content="index, follow">
     <meta name="rating" content="general">
     <link rel="canonical" href="https://sriramiks-small-magic.netlify.app/">
