chore: verify and sync final database configuration

--- a/login.html
+++ b/login.html
@@ -20,12 +20,11 @@
             margin: 0;
             overflow: hidden;
         }
-        #authContainer { display: block !important; position: relative; width: 90%; max-width: 400px; }
         .hidden { display: none !important; }
     </style>
 </head>
 <body>
-    <div id="authContainer">
+    <div id="authContainer" style="width: 100%; display: flex; justify-content: center;">
         <!-- Login Form -->
         <main id="loginForm" class="wood-panel">
             <h1 class="flapfing-title">LOGIN</h1>
