--- a/404.html
+++ b/404.html
@@ -3,65 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lost in the Clouds - Flapfing Official AI Game</title>
-    <meta name="description" content="Oops! You've flown off course. This page doesn't exist. Fly back to Flapfing, the official AI-controlled bird adventure.">
-    <meta name="keywords" content="Flapfing, 404 error, AI game, bird game, hand gesture game">
+    <title>Lost in the Clouds - Flapfing</title>
+    <link rel="icon" type="image/svg+xml" href="public/assets/bird.svg">
     <link rel="stylesheet" href="src/css/style.css">
     <style>
         body {
             background: #70c5ce;
+            background-image: url('public/assets/background.svg');
+            background-size: cover;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
             margin: 0;
-            padding: 20px;
-            box-sizing: border-box;
-        }
-        .container {
-            max-width: 400px;
-            width: 100%;
-            text-align: center;
-        }
-        .error-code {
-            font-size: 80px;
-            font-family: 'Press Start 2P', cursive;
-            color: #f1c40f;
-            -webkit-text-stroke: 3px #000;
-            text-shadow: 6px 6px 0 #000;
-            margin-bottom: 20px;
-        }
-        .message {
-            font-size: 16px;
-            color: #3E2723;
-            margin-bottom: 30px;
-            line-height: 1.6;
-            font-weight: bold;
         }
         .lost-bird {
-            width: 100px;
+            width: 60px;
             animation: confused 4s ease-in-out infinite;
-            margin-bottom: 30px;
+            margin: 20px auto;
+            display: block;
         }
         @keyframes confused {
             0%, 100% { transform: translate(0, 0) rotate(0deg); }
-            25% { transform: translate(-20px, -10px) rotate(-15deg); }
-            50% { transform: translate(10px, -20px) rotate(10deg); }
-            75% { transform: translate(-10px, 10px) rotate(-5deg); }
-        }
-        @media (max-width: 480px) {
-            .error-code { font-size: 50px; -webkit-text-stroke: 2px #000; }
-            .message { font-size: 14px; }
-            .lost-bird { width: 80px; }
+            50% { transform: translate(10px, -15px) rotate(10deg); }
         }
     </style>
 </head>
 <body>
-    <div class="container wood-panel">
-        <h1 class="error-code">404</h1>
+    <div class="wood-panel">
+        <h1 class="flapfing-title" style="font-size: 40px !important;">404</h1>
         <img src="./public/assets/bird.svg" alt="Confused Bird" class="lost-bird">
-        <p class="message">OYE! Where are you going? <br> This page doesn't exist. Even the bird is confused!</p>
-        <a href="index.html" class="btn">FLY BACK HOME</a>
+        <p style="font-family: 'Press Start 2P'; font-size: 8px; line-height: 1.6; color: #3E2723;">
+            OYE! WHERE ARE YOU GOING?<br>THIS PAGE DOESN'T EXIST.
+        </p>
+        <a href="index.html" class="btn" style="text-decoration: none; display: block; margin-top: 20px;">GO BACK</a>
     </div>
 </body>
 </html>
