--- a/leaderboard.html
+++ b/leaderboard.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flapfing - Global Leaderboard</title>
+    <!-- SEO Meta Tags for Leaderboard Page -->
+    <meta name="description" content="Check global high scores and player rankings for Flapfing, the AI Gesture-Controlled Bird Game. See who's the best!">
+    <meta name="keywords" content="Flapfing leaderboard, high scores, global ranking, best players, gesture game scores">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://sriramiks-small-magic.netlify.app/leaderboard.html">
     <link rel="icon" type="image/svg+xml" href="public/assets/bird.svg">
     <link rel="stylesheet" href="src/css/style.css">
     <script src="https://cdn.tailwindcss.com"></script>
