--- a/login.html
+++ b/login.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flapfing - Login & Sign Up</title>
+    <!-- SEO Meta Tags for Login Page -->
+    <meta name="description" content="Login or create a new account for Flapfing, the AI Gesture-Controlled Bird Game. Start flying with hand movements!">
+    <meta name="keywords" content="Flapfing login, Flapfing signup, AI game sign in, gesture game login, create account">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://sriramiks-small-magic.netlify.app/login.html">
     <link rel="icon" type="image/svg+xml" href="public/assets/bird.svg">
     <link rel="stylesheet" href="src/css/style.css">
     <script src="https://cdn.tailwindcss.com"></script>
