feat: switch profile photo from file upload to URL

--- a/login.html
+++ b/login.html
@@ -59,8 +59,8 @@
                 <input type="email" id="signupEmail" placeholder="Email" class="auth-input">
                 <input type="password" id="signupPassword" placeholder="Password" class="auth-input">
                 
-                <p style="font-family: 'Press Start 2P'; font-size: 8px; color: #5D4037; margin: 10px 0 5px 0;">PROFILE PHOTO (OPTIONAL)</p>
-                <input type="file" id="signupPhoto" accept="image/*" class="auth-input" style="font-size: 8px; padding: 8px;">
+                <p style="font-family: 'Press Start 2P'; font-size: 8px; color: #5D4037; margin: 10px 0 5px 0;">PROFILE PHOTO URL (OPTIONAL)</p>
+                <input type="url" id="signupPhoto" placeholder="https://example.com/avatar.jpg" class="auth-input">
                 
                 <div id="signupError" style="color: #e74c3c; font-size: 10px; margin-top: 10px; font-family: 'Press Start 2P';"></div>
                 <button id="emailSignupBtn" class="btn btn-secondary">CREATE ACCOUNT</button>
